[rd] Changed Files, Updated. read long
Re-write the whole index.html
Re write the whole reg.pn & reg.pw
Main Page - messed around with dropdown (nothing changed)
Changed Questions
Started on all claims - needs finishing

--- a/claims/Fire.html
+++ b/claims/Fire.html
@@ -6,8 +6,8 @@
 <body>
 <div id="outerbox">
     <div id="main">
-      <h2 style="text-align: center;">Covea Claiming for fire cover</h2>
-      <form action="./unable_fire.html" method="post">
+      <h1 style="text-align: center;">Covea Claiming for fire cover</h1>
+      <form>
         <div class="imgcontainer">
         </div>
 
@@ -16,7 +16,7 @@
             <input disabled type="text" placeholder="Fire cover" name="uname" required>
             <label for="uname"></label>
             <input type="text" placeholder="How many rooms where damaged?..." name="uname" required>
-            <button type="submit"><h2>Submit</h2></button>
+            <a href="./unable_fire"><button type="button"><h2>Submit</h2></button></a>
           </div>
           <div class="container_var">
             <a href="../mainpage.html"><button type="button" class="cancelbtn"><h2>Go Home</h2></button></a>
