--- a/claims/Home.html
+++ b/claims/Home.html
@@ -14,10 +14,10 @@
           <div class="container">
             <label for="uname"><b>You're claiming for:</b></label>
             <input disabled type="text" placeholder="Home cover" name="uname" required>
-            <button type="submit">Submit</button>
+            <a href="./unable_fire"><button type="button"><h2>Submit</h2></button></a>
           </div>
           <div class="container_var">
-            <a href="../mainpage.html"><button type="button" class="cancelbtn">Go Home</button></a>
+            <a href="../mainpage.html"><button type="button" class="cancelbtn"><h2>Go Home</h2></button></a>
           </div>
      </form>
    </div>
