--- a/claims/motor.html
+++ b/claims/motor.html
@@ -6,8 +6,8 @@
 <body>
 <div id="outerbox">
     <div id="main">
-      <h2 style="text-align: center;">Covea claiming for motor cover</h2>
-      <form action="Questions.html" method="post">
+      <h1 style="text-align: center;">Covea claiming for motor cover</h1>
+      <form>
         <div class="imgcontainer">
         </div>
           <div class="container">
@@ -19,11 +19,11 @@
               <option value="YG12 2JD">
               <option value="DH23 1HD">
               <option value="ur4 f1n">
-            </datalist>
-            <button type="submit"><h2>Submit</h2></button>
+            </datalist> <br> <br> <br>
           </div>
           <div class="container_var">
             <a href="../mainpage.html"><button type="button" class="cancelbtn"><h2>Go Home</h2></button></a>
+            <a href="./Questions.html"><button type="button"><h2>Submit</h2></button></a>
           </div>
      </form>
    </div>
