--- a/mainpage.html
+++ b/mainpage.html
@@ -7,9 +7,7 @@
   <body>
     <div id"outerbox">
       <div id="header">
-        <h1 style="text-align: center;"> Covéa insurance </h1>
-        <!--<img class="logo" src="./images/Logo.png"alt="Covea Logo"><br> Logo and takes a break-->
-
+        <h1 style="text-align: center; margin: 2%">Welcome -</h1> <!--Wanted to say name here-->
         <div class="dropdown">
           <button onclick="myFunction()" class="dropbtn" style="width: 100%; height: 25%;"></button>
           <div id="myDropdown" class="dropdown-content">
@@ -51,7 +49,7 @@
                 <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span>
                  <!-- Would be picture-->
                  <!-- <img src="./images/avatar.png" alt="Avatar" class="avatar"> -->
-                <h3>Support!</h3>
+                <h3>Contact!</h3>
               </div>
                <!--Creates content inside box-->
                <div class="container">
@@ -82,8 +80,7 @@
         <h2 style="color: black;"> Your Policies!</h2> <br><br>
         <div id="polices">
           <!--<input type="text" placeholder="Search..." id="myInput" onkeyup="filterFunction()">-->
-
-        <div id="main_c">
+        <div id="main_c" tag="motor">
             <div id="policy" tag="motor"> <!--Policy Box 1 - Motor Cover-->
             <h1>You have Motor Insurance</h1>
                 <h3 style="text-align: center;">With Motor Cover you're able to claim for breakdowns, Crashes,Car fires and more!<br> This Insurance allows you to have complete cover of your vehicles no matter what happens.</h3>
@@ -94,7 +91,7 @@
         </div>
         <div id="space">
         </div>
-        <div id="main_c"><!--Lost pet cover-->
+        <div id="main_c" tag="pet"><!--Lost pet cover-->
         <div id="policy_alt"> <!--Policy Box 1 - Motor Cover-->
             <h1>You have Lost pet Cover</h1>
                 <h3 style="text-align: center;">With Lost pet Cover you're able to claim if your pet has ran away from home,lost, or sadly passed on</h3>
@@ -105,7 +102,7 @@
         </div>
         <br>
         <br>
-        <div id="main_c"><!--Fire Cover-->
+        <div id="main_c" tag="fire"><!--Fire Cover-->
             <div id="policy"> <!--Policy Box 1 - Motor Cover-->
             <h1>You have Fire Cover</h1>
                 <h3 style="text-align: center;">With Fire Cover you're able to claim if there has been a fire at any of your properties.<br> This Cover allows you to have complete cover of your Buildings/homes no matter what happens.</h3>
@@ -116,7 +113,7 @@
         </div>
         <br>
         <br>
-        <div id="main_c"><!--Home Cover-->
+        <div id="main_c" tag="home"><!--Home Cover-->
             <div id="policy_alt"> <!--Policy Box 1 - Motor Cover-->
             <h1>You have Home Cover</h1>
                 <h3 style="text-align: center;">With Home Cover you're able to claim if there has been a fire at any of your properties.<br> This Cover allows you to have complete cover of your Buildings/homes no matter what happens.</h3>
@@ -127,7 +124,7 @@
         </div>
         <br>
         <br>
-        <div id="main_c"><!--Theft Cover-->
+        <div id="main_c" tag="theft"><!--Theft Cover-->
             <div id="policy"> <!--Policy Box 1 - Motor Cover-->
             <h1>You have Theft Cover</h1>
                 <h3 style="text-align: center;">With Theft Cover you're able to claim if there has been a robbery at any of your propertys.<br> This Cover allows you to have complete cover of your Buildings/homes no matter what happens.</h3>
@@ -138,7 +135,7 @@
         </div>
         <br>
         <br>
-        <div id="main_c"><!--Technology Cover-->
+        <div id="main_c" tag="Technology"><!--Technology Cover-->
             <div id="policy_alt"> <!--Policy Box 1 - Motor Cover-->
             <h1>You do <B>NOT</B> have Technology Cover</h1>
                 <h3 style="text-align: center;">With Technology Cover you're able to claim if anything happens to any of your products on this cover, Broken, Stolen, Damaged<br> Covering Phones, Laptops, Smart Watchs, Wireless earphones.</h3>
