--- a/details/reg.pn.html
+++ b/details/reg.pn.html
@@ -1,61 +1,28 @@
 <html>
-<head>
-<title>Welcome - Policy forgot</title>
-<link href="../CSS.css" rel="stylesheet" type="text/css" />
-</head>
-<body>
-<div id="outerbox">
-<div id="mainlog">
-<h1>Welcome to Covéa</h1>
-<!--Creates "Login" button-->
-<button onclick="document.getElementById('id01').style.display='block'" style="width:65%; height: 25%;"><h2>I don't know my policy number</h2></button>
-<!--Uses login to create a pop up box-->
-<div id="id01" class="modal">
-  <form class="modal-content animate" action="./reg.pn/192102935.html" method="post"><!--What it should do when confirmed-->
-    <div class="imgcontainer">
-      <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-	  <!-- Would be picture-->
-      <!--<img src="img_avatar2.png" alt="Avatar" class="avatar">-->
-	  	  <h4>Policy number</h4>
-    </div>
-	<!--Creates content inside box-->
-    <div class="container">
-	  <label for="uname"><b>Your Date of birth</b></label><br>
-      <input type="date" placeholder="01/01/2000" name="uname" required><br>
-      <label for="uname"><b>Your full name</b></label>
-      <input type="text"  placeholder="John Doe..." (KM) name="uname" required>
-      <label for="uname"><b>Confirm your number</b></label>
-	  <input type="text"  placeholder="Your Mobile Number.." name="uname" required>
-      <button type="submit">Authorise me</button>
-      <label>
-      </label>
-    </div>
-	<!--Allows to either cancel or tell us you forgot password -->
-    <div class="container" style="background-color:#f1f1f1">
-      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-    </div>
-  </form>
-</div>
-<!--Creates register option-->
-<br><button onclick="document.getElementById('id02').style.display='block'" style="width:65%; height: 25%"><h2>I don't have a policy number</h2></button>
-<div id="id02" class="modal">
-  <form class="modal-content animate" action="../login.html" method="post">
-    <div class="imgcontainer">
-      <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span>
-      <!--<img src="img_avatar2.png" alt="Avatar" class="avatar">-->
-	  <h4>We're happy to see you want to use our service to be apart of our team please visit your <br> local branch, Halifax Dean clough. or Call us at: 01484 0000000</h4>
-    </div>
-    <div class="container">
-      <button type="submit">Go Back to log in</button>
-    </div>
-    <div class="container" style="background-color:#f1f1f1">
-      <button type="button" onclick="document.getElementById('id02').style.display='none'" class="cancelbtn">Cancel</button>
+  <head>
+    <title>Forgotten Policy Number</title>
+    <link href="../CSS.css" rel="stylesheet" type="text/css">
+  </head>
+  <body>
+    <div id="mainlog">
+      <div id="modal_1">
+        <form class="modal-content animate"><!--What it should do when confirmed-->
+          <div class="container">
+            <span onclick="document.getElementById('close').style.display='block'" class="close" title="Close Modal">&times;</span>
+            <img src="../images/Logo.png" alt="Covea Logo"><br>
+            <h1>Forgoten password!</h1>
+          </div>
+          <div class="container">
+            <label for="pcy"></label>
+              <h3 style="text-align: center;"> We understand the pain of forgetting numbers,<br>Please call and use your refernce code <br> below your local branch on: 01484 1730022</h3>
+                  <blockquote style="font-size: 35px">01456743</blockquote>
+          </div>
+          <div class="container" style="background-color:#f1f1f1">  <!--Allows to either cancel or tell us you forgot password -->
+            <a href="../index.html"><button type="button"class="cancelbtn" style="width:auto; height: 10%"><h5>Log In</h5></button></a>
+          </div>
+        </form>
 
+      </div>
     </div>
-  </form>
-</div>
-</div>
-
-</div>
-</body>
+  </body>
 </html>
