--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <img class="logo"src="./images/Logo.png" alt="Covea Logo"><br> <!--Logo and takes a break-->
         <!--Creates "Login" button-->
         <button onclick="document.getElementById('id01').style.display='block'" class="main_login" ><h2>Login</h2></button>
-        <!--<br><button class="main_login" onclick="document.getElementById('id02').style.display='block'" style="background-color:#0e1616"><h2>Register</h2></button>
-        <br><button class="main_login" style="background-color:#0e1616"><h2>Forgotten Your password?</h2></button><onclick="document.getElementById('id02').style.display='block'" -->
+        <br><button class="main_login" onclick="document.getElementById('id02').style.display='block'"><h2>Register</h2></button>
+        <br><button class="main_login" onclick="document.getElementById('id03').style.display='block'"><h2>Forgotten Your password?</h2></button>
         <!--Uses login to creat a pop up box-->
         <div id="id01" class="modal">
           <form class="modal-content animate"><!--What it should do when confirmed-->
@@ -22,54 +22,46 @@
             </div>
         	<!--Creates content inside box-->
             <div class="container">
-              <label for="pcy"></label>
+              <label for="pcy">
                 <input type="number"name="uname" placeholder="Enter Your Policy Number..."required> <!--Allows user to input policy number in as a text field--> <!-- min="6" max="531441" -->
                 <label for="psw"></label>
                 <input type="password" placeholder="Enter Your Password..." name="psw" required> <!--Allows users to put password in-->
                 <a href="./mainpage.html"><button type="button" style="width:20%; height: auto"><h5>Login</h5></button></a>
               </label>
-              <label>
-                  <input type="checkbox" checked="checked" name="remember"> Remember me
-              </label>
             </div>
             <div class="container" style="background-color:#f1f1f1">  <!--Allows to either cancel or tell us you forgot password -->
-              <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn" style="width:auto; height: 10%"><h5>Cancel</h5></button>
+              <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn" style="width:20%; height: 10%"><h5>Cancel</h5></button>
             </div>
           </form>
         </div>
-        <!--
         <div id="id02" class="modal">
           <form class="modal-content animate" action="./mainpage.html" method="post">
             <div class="imgcontainer">
+              <img src="./images/Logo.png" alt="Covea Logo"><br>
               <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span>
         	  <h1>Register with us!</h1>
             </div>
             <div class="container">
-
-              <label for="usame"></label>
+              <label for="usame">
               <input type="text" placeholder="Enter Your Policy Number..." name="usame" required>
               <This is used as an input box which the user is told to input their username.
               <label for="usame"></label>
               <input type="text" placeholder="Enter a Username..." name="usame" required>
-              The user inputs a password which is secure and the placeholder tells the user to input this.
-              <label for="psw"><b>Password</b></label>
+              <label for="psw"></label>
               <input type="password" placeholder="Enter a Password..." name="psw" required>
-              The user inputs a verification of the 1st entry of the password and if they do not match the user will be asked to re-enter their personal password.
               <input type="password" placeholder="Please re-enter the password..." name="psw" required>
-              <button type="submit">Login</button>
-              <label>
-                <input type="checkbox" checked="checked" name="remember"> Remember me
+              <a href="./mainpage.html"><button type="button" style="width:20%; height: auto"><h5>Register</h5></button></a>
               </label>
             </div>
             <div class="container" style="background-color:#f1f1f1">
-              <button type="button" onclick="document.getElementById('id02').style.display='none'" class="cancelbtn">Cancel</button>
-           	   <span class="pnu">Dont have a <a href="./details/reg.pn.html">policy number?</a></span>
+              <button type="button" onclick="document.getElementById('id02').style.display='none'" style="width:20%; height: auto" class="cancelbtn"><h5>Cancel</h5></button>
             </div>
           </form>
         </div>
         <div id="id03" class="modal">
           <form class="modal-content animate" action="./details/reg.pw.html" method="post">
             <div class="imgcontainer">
+              <img src="./images/Logo.png" alt="Covea Logo"><br>
               <span onclick="document.getElementById('id03').style.display='none'" class="close" title="Close Modal">&times;</span>
         	  <h4>Register with us!</h4>
             </div>
@@ -80,16 +72,15 @@
                 <input type="email" placeholder="Enter your email address..." name="email" required>
                 <label for="pw"></label>
                 <input type="email" placeholder="Enter your policy number..." name="email" required>
-                <button type="submit">Login</button>
-                <a href="./details/reg.pw.html"<button type="submit">But I don't know my policy number?</button></a>
+                <a href="./details/reg.pw.html"><button type="button" style="width:20%; height: auto"><h5>Submit</h5></button></a>
+                <a href="./details/reg.pn.html"><button type="button"  style="width:auto; height: auto"><h5>Don't know your policy number?</h5></button></a>
               </label>
             </div>
             <div class="container" style="background-color:#f1f1f1">
-              <button type="button" onclick="document.getElementById('id03').style.display='none'" class="cancelbtn">Cancel</button>
+              <button type="button" onclick="document.getElementById('id03').style.display='none'" class="cancelbtn"><h5>Cancel</h5></button>
             </div>
           </form>
         </div>
-      -->
       </div>
     </div>
   </body>
