--- a/claims/unable_theft.html
+++ b/claims/unable_theft.html
@@ -5,14 +5,24 @@
   <script src="js.js"></script>
 </head>
 <body>
-  <div id="outerbox">
-    <div id="mainlog">
-      <h1>Welcome to Covéa</h1>
-      <h2>Sorry to inform you but your <b>theft</b> cover is unavailable on our mobile app at the moment .If this is an emergency call 999 then call us immediately on 01484 999101. Please visit your local branch, Halifax dean clough<br> sorry for any inconvenience! <br></h2>
-      <!--<button onclick="random()"style="width:65%; height: 15%">Generate your unique reference number</button>
-      <p id="gen"></p> -->
-      <button style="width:65%; height: 15%"><a href="../mainpage.html"><h2>Home</h2></a></button>
-    </div>
+  <div id="mainlog">
+    <div id="modal_1">
+      <form class="modal-content animate"><!--What it should do when confirmed-->
+        <div class="container">
+          <span onclick="document.getElementById('close').style.display='block'" class="close" title="Close Modal">&times;</span>
+          <img src="../images/Logo.png" alt="Covea Logo"><br>
+  <h1>Welcome to Covéa</h1>
 </div>
+<div class="container">
+  <label for="pcy"></label>
+    <h3 style="text-align: center;"> Sorry to inform you but your <b>THEFT</b> <br>cover is unavailable on our mobile app at the moment.<br>  If this is an emergency call 999 then call us immediately on 01484 999101. <br>Please visit your local branch, Halifax dean clough<br> sorry for any inconvenience!</h3>
+        <blockquote style="font-size: 35px">
+        </div>
+        <div class="container" style="background-color:#f1f1f1">  <!--Allows to either cancel or tell us you forgot password -->
+          <a href="../mainpage.html"><button type="button"class="cancelbtn" style="width:auto; height: 10%"><h5>Home</h5></button></a>
+        </div>
+      </form>
+
+      </div>
 </body>
 </html>
